# web-scraping-to-markdown

./: .gitignore  firecrawl.py  main.py  makefile  pyproject.toml
src/: data_processor.py  missing_files.py  selenium_data.py
